// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-hKFyIo eUFJqs Sidebar-resources"
>
  <ul
    className="sc-eCApGN ha-dpKs"
  >
    <li
      className="sc-jSFkmK sc-gKAblj gNevMY jRtnvI isSelected"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/"
        onClick={[Function]}
        title="all"
      >
        <div
          className="sc-bdnylx bqmyzl isNone"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            7
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          All
        </p>
      </a>
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/resource4"
        onClick={[Function]}
        title="resource4"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            resource4
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:36:03.000Z"
              title="2017-12-21T15:36:03.000Z"
            >
              &lt;5s ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/resource9"
        onClick={[Function]}
        title="resource9"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            resource9
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:35:58.000Z"
              title="2017-12-21T15:35:58.000Z"
            >
              &lt;15s ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/resource19"
        onClick={[Function]}
        title="resource19"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            resource19
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:35:48.000Z"
              title="2017-12-21T15:35:48.000Z"
            >
              &lt;30s ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/resource29"
        onClick={[Function]}
        title="resource29"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            resource29
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:35:38.000Z"
              title="2017-12-21T15:35:38.000Z"
            >
              &lt;30s ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/resource39"
        onClick={[Function]}
        title="resource39"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            resource39
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:35:28.000Z"
              title="2017-12-21T15:35:28.000Z"
            >
              &lt;45s ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/resource49"
        onClick={[Function]}
        title="resource49"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            resource49
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:35:18.000Z"
              title="2017-12-21T15:35:18.000Z"
            >
              &lt;1m ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/resource54"
        onClick={[Function]}
        title="resource54"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            resource54
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:35:13.000Z"
              title="2017-12-21T15:35:13.000Z"
            >
              &lt;1m ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
  </ul>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-hKFyIo eUFJqs Sidebar-resources"
>
  <ul
    className="sc-eCApGN ha-dpKs"
  >
    <li
      className="sc-jSFkmK sc-gKAblj gNevMY jRtnvI isSelected"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/"
        onClick={[Function]}
        title="all"
      >
        <div
          className="sc-bdnylx bqmyzl isNone"
        >
          <span>
             
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          All
        </p>
      </a>
    </li>
  </ul>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-hKFyIo eUFJqs Sidebar-resources"
>
  <ul
    className="sc-eCApGN ha-dpKs"
  >
    <li
      className="sc-jSFkmK sc-gKAblj gNevMY jRtnvI isSelected"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/"
        onClick={[Function]}
        title="all"
      >
        <div
          className="sc-bdnylx bqmyzl isNone"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            2
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          All
        </p>
      </a>
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/vigoda"
        onClick={[Function]}
        title="vigoda"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            vigoda
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            12s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/snack"
        onClick={[Function]}
        title="snack"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            snack
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG"
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s ago
            </time>
          </span>
          <span
            className="sc-jrsJCI fhJJUT"
          >
            -10.0s
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
  </ul>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-hKFyIo eUFJqs Sidebar-resources"
>
  <ul
    className="sc-eCApGN ha-dpKs"
  >
    <li
      className="sc-jSFkmK sc-gKAblj gNevMY jRtnvI isSelected"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/"
        onClick={[Function]}
        title="all"
      >
        <div
          className="sc-bdnylx bqmyzl isNone"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            2
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          All
        </p>
      </a>
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/vigoda"
        onClick={[Function]}
        title="vigoda"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            vigoda
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG isEmpty"
          >
            —
          </span>
          <span
            className="sc-jrsJCI fhJJUT isEmpty"
          >
            —
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
    <li
      className="sc-jSFkmK gNevMY  isBuilding"
    >
      <a
        className="sc-crzoUp gMPNfP"
        href="/r/snack"
        onClick={[Function]}
        title="snack"
      >
        <div
          className="sc-bdnylx bqmyzl isBuilding"
        >
          <span
            className="sc-gtssRu bdlHqP"
          >
            1
          </span>
        </div>
        <p
          className="sc-iCoHVE dwxClQ"
        >
          <span
            className="sc-fujyUd fIrNil"
          >
            snack
          </span>
        </p>
        <div
          className="sc-pNWxx yWHfW"
        >
          <span
            className="sc-kEqYlL eJIBeG isEmpty"
          >
            —
          </span>
          <span
            className="sc-jrsJCI fhJJUT isEmpty"
          >
            —
          </span>
        </div>
      </a>
      <button
        className="sc-dlnjPT bGTNQz SidebarTriggerButton 
          "
        disabled={true}
        onClick={[Function]}
        title="Cannot trigger an update while resource is updating or update is pending."
      />
    </li>
  </ul>
  <span />
</nav>
`;
